Squares are randomly colored upon hover

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<meta charset="utf-8"/>
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="application.css">
 	</head>
 	<body>
+		<button type="button">Reset</button>
 		<script src="jquery.js"></script>
 		<script src="application.js"></script>
 	</body>
