Added title and icon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <meta charset="utf-8"/>
 <html>
 	<head>
+		<title> Etch a sketch </title>
+		<link rel="icon" type="image/png" href="res/pencil.png" />
 		<link rel="stylesheet" type="text/css" href="application.css">
 	</head>
 	<body>
+		<div></div>
 		<button type="button">Reset</button>
 		<script src="jquery.js"></script>
 		<script src="application.js"></script>
